--- a/libdap-qt-ui-qml.qrc
+++ b/libdap-qt-ui-qml.qrc
@@ -4,5 +4,6 @@
         <file>DapButtonForm.ui.qml</file>
         <file>DapComboBox.qml</file>
         <file>DapComboBoxForm.ui.qml</file>
+        <file>DapChartCandleStick.qml</file>
     </qresource>
 </RCC>
