[+]Add file form.ui

--- a/libdap-qt-ui-qml.qrc
+++ b/libdap-qt-ui-qml.qrc
@@ -5,5 +5,6 @@
         <file>DapComboBox.qml</file>
         <file>DapComboBoxForm.ui.qml</file>
         <file>DapChartCandleStick.qml</file>
+        <file>DapChartCandleStickForm.ui.qml</file>
     </qresource>
 </RCC>
