[+] Add comboBox with support of choosing custom date range

--- a/libdap-qt-ui-qml.qrc
+++ b/libdap-qt-ui-qml.qrc
@@ -32,5 +32,7 @@
         <file>widgets/DapBusyIndicatorForm.ui.qml</file>
         <file>widgets/DapCalendar.qml</file>
         <file>widgets/DapCalendarForm.ui.qml</file>
+        <file>widgets/DapComboBoxCustomRange.qml</file>
+        <file>widgets/DapComboBoxCustomRangeForm.ui.qml</file>
     </qresource>
 </RCC>
