--- a/libdap-qt-ui-qml.qrc
+++ b/libdap-qt-ui-qml.qrc
@@ -30,5 +30,9 @@
         <file>DapFont.qml</file>
         <file>widgets/DapBusyIndicator.qml</file>
         <file>widgets/DapBusyIndicatorForm.ui.qml</file>
+        <file>widgets/DapCalendar.qml</file>
+        <file>widgets/DapCalendarForm.ui.qml</file>
+        <file>widgets/DapComboBoxCustomRange.qml</file>
+        <file>widgets/DapComboBoxCustomRangeForm.ui.qml</file>
     </qresource>
 </RCC>
